--- a/app/views/statuses/index.html.erb
+++ b/app/views/statuses/index.html.erb
@@ -1,4 +1,9 @@
+<%= link_to 'Previous page', page: @page - 1 %>
+<%= link_to 'Next page', page: @page + 1 %>
+
+
 <% @statuses.each do |s| %>
+
 
   <%= div_for s do %>
 
